--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,11 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
 body {
-  background-color: #fff;
+  background-color: #f00;
+  min-height: 100vh;
 }
 
 .logo {
